[gd_scene load_steps=3 format=3 uid="uid://c1safyv2w7biw"]

[ext_resource type="Script" path="res://scenes/inventory/sell_shop.gd" id="1_4hp3t"]
[ext_resource type="PackedScene" uid="uid://cb3d10a6rs8d4" path="res://scenes/inventory/item_slot.tscn" id="1_yw1qq"]

[node name="Sell" type="MarginContainer"]
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_4hp3t")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="ItemSlot" parent="VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource("1_yw1qq")]
layout_mode = 2

[node name="SellButton" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sell"

[node name="SellInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
